building an api